--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,12 +5,11 @@ repo: upptime # The name of this repository
 sites:
   - name: Google
     url: https://www.google.com
-  - name: Win11React
-    url: https://win11.blueedge.me/
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+    icon: https://www.google.com/favicon.ico
+  - name: Apple
+    url: https://apple.com/
+  - name: YouTube
+    url: https://www.youtube.com/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
